--- a/tp_1/CMakeLists.txt
+++ b/tp_1/CMakeLists.txt
@@ -41,7 +41,7 @@ set ( ZZ3_HEADERS
       src/nuage.hpp
       src/point.hpp
       src/polaire.hpp
-      #src/vecteur.hpp
+      src/vecteur.hpp
     )
 
 set ( ZZ3_SOURCES
@@ -49,7 +49,7 @@ set ( ZZ3_SOURCES
       src/nuage.cpp
       src/point.cpp
       src/polaire.cpp
-      #src/vecteur.cpp
+      src/vecteur.cpp
     )
 
 set ( ZZ3_HEADERS_TEST
