--- a/tp_3/CMakeLists.txt
+++ b/tp_3/CMakeLists.txt
@@ -37,13 +37,13 @@ message ( STATUS "Compiler flags: ${CMAKE_CXX_FLAGS}" )
 
 # Sources #-----------------------------------------------------------------------------------------
 set ( ZZ3_HEADERS
-      #src/chaine.hpp
+      src/chaine.hpp
       #src/cosinus.hpp
       src/demangle.hpp
       #src/exception.hpp
       #src/exponentielle.hpp
-      #src/factorielle.hpp
-      #src/puissance.hpp
+      src/factorielle.hpp
+      src/puissance.hpp
     )
 
 set ( ZZ3_SOURCES
