dernier test a faire

--- a/tp_4/CMakeLists.txt
+++ b/tp_4/CMakeLists.txt
@@ -16,16 +16,16 @@ endif ()
 set ( PROJECT_HEADERS
       src/carte.hpp
       src/complexe.hpp
-      #src/consommateur.hpp
+      src/consommateur.hpp
       src/mouchard.hpp
       src/paquet.hpp
-      #src/ressource.hpp
+      src/ressource.hpp
       src/usine.hpp
       src/vecteur.hpp
     )
 
 set ( PROJECT_SOURCES
-      #src/ressource.cpp
+
     )
 
 set ( TEST_HEADERS
